@@ -1,3 +1,7 @@
+2007-11-07 Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Made a workaround for pre-4.2 bug where TYPO3 does not correctly handle flexform sheet references (see http://bugs.typo3.org/view.php?id=6581)
+
 2007-10-24 Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Added commenting closing
